--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,34 @@
   text-align: center;
 }
 
+
+.btn-2{
+  margin:20px;
+}
+.container{
+  background-color:white;
+  border-radius:20px;
+}
+
+.inp-container{
+  display:flex;
+  flex-direction:column;
+  padding:30px;
+  margin-top:20px;
+}
+
+.inp{
+  width:250px;
+  height:30px;
+  margin-top:20px;
+  border-radius:5px;
+}
+.heading-2{
+  padding:10px;
+}
+.btn{
+  margin-bottom:10px;
+}
 .logo {
   height: 6em;
   padding: 1.5em;
